# cellular-automata

./: Cargo.toml  README.md
imgs/: Screen Recording 2024-03-03 at 06.16.54.MOV  conways_life_demo1.mov  conways_life_lwss_demo1.mov
src/: main.rs
src/automata/: mod.rs  rule.rs  state.rs  traits.rs
src/menu/: control_screen.rs  mod.rs
src/rendering/: diagnostics.rs  mod.rs  render.rs
